# MPP

./: .dockerignore  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  README.md  README.zh-CN.md  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.agents/: setup.md
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml  03_platform_adapter_request.yml  04_documentation.yml  05_question.yml  config.yml
.github/workflows/: ai-service-ci.yml  backend-ci.yml  browser-worker-ci.yml  ci.yml  collab-service-ci.yml  container-images.yml  content-pipeline-integration.yml  content-pipeline-service-ci.yml  extension-ci.yml  frontend-ci.yml  kubernetes-ci.yml  kubernetes-image-promotion.yml  kubernetes-smoke.yml
ai-service/: Dockerfile  contract_schemas.py  llm_client.py  main.py  observability.py  prompts.py  pyproject.toml  routes.py  schemas.py
ai-service/tests/: test_llm_client.py  test_routes.py
backend/: .golangci.yml  Dockerfile  go.mod  go.sum
browser-worker/: .golangci.yml  Dockerfile  docker.go  go.mod  go.sum  main.go
browser-worker/runtime/: Dockerfile  entrypoint.sh
collab-service/: .oxfmtrc.json  Dockerfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
collab-service/src/: app.test.ts  app.ts  config.ts  metrics.ts  server.ts
content-pipeline-service/: Cargo.toml  Dockerfile  PROFILE_VERSIONS.md  clippy.toml
content-pipeline-service/crates/content-pipeline-core/: Cargo.toml
content-pipeline-service/crates/content-pipeline-core/src/: drafts.rs  lib.rs  media.rs
content-pipeline-service/crates/content-pipeline-core/src/drafts/: assets.rs  html.rs  profiles.rs  profiles_generated.rs  schema.rs  text.rs
content-pipeline-service/crates/content-pipeline-core/src/media/: optimizer.rs  profiles.rs  tests.rs
content-pipeline-service/crates/content-pipeline-core/src/media/optimizer/: conversion.rs  lossless.rs  perceptual.rs  resize.rs
content-pipeline-service/crates/content-pipeline-core/tests/: drafts.rs  profile_versions.rs
content-pipeline-service/crates/content-pipeline-core/tests/fixtures/: representative_article.html
content-pipeline-service/crates/content-pipeline-core/tests/fixtures/draft_snapshots/: douyin.json  wechat.json  x.json  zhihu.json
content-pipeline-service/crates/content-pipeline-proto/: Cargo.toml  build.rs
content-pipeline-service/crates/content-pipeline-proto/src/: lib.rs
content-pipeline-service/crates/content-pipeline-service/: Cargo.toml
content-pipeline-service/crates/content-pipeline-service/src/: drafts.rs  main.rs  media.rs  media_store.rs  metrics.rs
content-pipeline-service/crates/content-pipeline-service/src/media/: download.rs  object_ref.rs
content-pipeline-service/proto/mpp/contentpipeline/v1/: content_pipeline.proto
contracts/: README.md  bundle_openapi.rb  env.schema.yaml  generate-platform-capabilities.ts  generate.sh  openapi.yaml  platform-capabilities.json
contracts/components/: account.yaml  ai.yaml  brand.yaml  browser-worker.yaml  collab.yaml  content.yaml  project.yaml  template.yaml  workspace.yaml
contracts/paths/: browser-worker.yaml
contracts/views/: ai-service.openapi.yaml  backend.openapi.yaml  browser-worker.openapi.yaml  frontend.openapi.yaml
deploy/docker/: .env.deploy.example  .env.dev.example  docker-compose.dev.yml  docker-compose.tls-letsencrypt.yml  docker-compose.tls-manual.yml  docker-compose.yml
deploy/kubernetes/: kustomization.yaml
doc/: api_dashboard.md  claude_code_leak_analysis.md  high-concurrency-distributed-architecture-plan.md  kubernetes-operations-runbook.md  managed-redis-nonprod-validation.md  managed-redis-production-cutover-record.md  managed-redis-production-migration-runbook.md  module-interface.md  new-platform-development-guide.md  node-dependency-management.md  openAPI-code-generation-guide.md  platform.md  project-platform-model.md  redis-cluster-compatibility-audit.md  redis-dependency-map.md  redis-key-hash-tag-convention.md  remote_browser_session.md  self-hosted-redis-decommission-record.md  setup-dev.md  setup-kubernetes.md  setup-standalone.md  setup.md  tech-stack.md
doc/plan/: ai-business-deepening-plan.md  database-access-consistency-inventory.md  database-optimization.md  deferred-editor-media-upload-plan.md  docker-decoupling-kubernetes-deployment-plan.md  extension-workbench-ui-simplification-plan.md  (+8 more)
doc/redis/: README.md  (+3 more)
docker/: .env.deploy.example  .env.dev.example  .env.example  docker-compose.dev.yml  docker-compose.yml
extension/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts  wxt.config.ts
frontend/: .oxlintrc.json  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
(+715 files in other folders)
