[workspace]
members = [
    "crates/content-pipeline-core",
    "crates/content-pipeline-proto",
    "crates/content-pipeline-service",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.96.0"
license = "MIT"
repository = "https://github.com/kurodakayn/MPP"

[workspace.dependencies]
base64 = "0.22.1"
bytes = "1.10.1"
prost = "0.14.1"
prost-types = "0.14.1"
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = "1.48.0"
tonic = "0.14.2"
tonic-health = "0.14.2"
tonic-prost = "0.14.2"
tonic-prost-build = "0.14.2"
tonic-reflection = "0.14.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[workspace.lints.clippy]
cloned_instead_of_copied = "warn"
dbg_macro = "warn"
format_push_string = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
large_futures = "warn"
manual_instant_elapsed = "warn"
manual_is_power_of_two = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_midpoint = "warn"
manual_string_new = "warn"
map_unwrap_or = "warn"
match_same_arms = "warn"
mod_module_files = "warn"
or_fun_call = "warn"
print_stderr = "warn"
print_stdout = "warn"
redundant_else = "warn"
todo = "warn"
undocumented_unsafe_blocks = "warn"
uninlined_format_args = "warn"
unnecessary_lazy_evaluations = "warn"
unwrap_or_default = "warn"
unwrap_used = "deny"
used_underscore_binding = "warn"
