[package]
name = "content-pipeline-service"
version = "0.1.0"
edition = "2024"

[dependencies]
content-pipeline-core = { version = "0.1.0", path = "../content-pipeline-core" }
content-pipeline-proto = { version = "0.1.0", path = "../content-pipeline-proto" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tonic.workspace = true
tonic-health.workspace = true
tonic-reflection = { workspace = true, features = ["server"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
