[package]
name = "content-pipeline-service"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
axum = "0.8.9"
content-pipeline-core = { version = "0.1.0", path = "../content-pipeline-core" }
content-pipeline-proto = { version = "0.1.0", path = "../content-pipeline-proto" }
futures-util = "0.3.31"
prometheus = "0.14.0"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "http2", "json", "stream"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tonic.workspace = true
tonic-health.workspace = true
tonic-reflection = { workspace = true, features = ["server"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
